k8s/pet-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-web-app
spec:
  type: ClusterIP
  selector:
    app: pet-web-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
